--- a/.github/workflows/ci-app.yml
+++ b/.github/workflows/ci-app.yml
@@ -11,6 +11,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '18.x'
+          cache: 'npm'
+      - uses: hexlet-components/hello-from-hexlet-action@release
       - run: make setup
       - run: make test
       - run: make lint
